<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    android:background="@drawable/background" >

  	<!-- Header Text -->
  	<TextView
        android:id="@+id/headerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom= "20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:textColor="#07353a"
        android:text="@string/app_name" />
      
  	<!-- Location Fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:gravity="center"
        android:orientation="horizontal">
        
    	<TextView
        	android:id="@+id/locationLabelTV"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="#07353a"
        	android:text="@string/location_lbl" />

     	<EditText
        	android:id="@+id/locationET"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:inputType="textPostalAddress" />
     </LinearLayout>
    
    <!-- Date Fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    	android:gravity="center">
     	
    	<TextView
        	android:id="@+id/dateLabelTV"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:textColor="#07353a"
        	android:text="@string/date_lbl" />

    	<EditText
        	android:id="@+id/dateET"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:inputType="date" />
	</LinearLayout>
	
     <Button
        android:id="@+id/roundStartBTN"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_start_button"
        android:text="START"
        android:textSize="30sp"
        android:textColor="#fff" />
     
     
     <TextView
        android:id="@+id/mainInfoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#07353a"
        android:text="TextView" />
     
     <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
      
     	<Button
        	android:id="@+id/calanderBTN"
        	android:layout_width="80dp"
        	android:layout_height="80dp"
        	android:text="Calander" />
      
    	<Button
        	android:id="@+id/optionsBTN"
        	android:layout_width="80dp"
        	android:layout_height="80dp"
        	android:layout_margin="20dp"
        	android:text="Options" />

    	<Button
        	android:id="@+id/exitBTN"
        	android:layout_width="80dp"
        	android:layout_height="80dp"
        	android:text="Exit" />
	</LinearLayout>
    

</LinearLayout>